<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, LifeLoggerMain!</string>
    <string name="app_name">LifeLogger</string>
    <string name="edit_events">Edit Events</string>
    <string name="header_active">Active</string>
    <string name="header_eventName">Event Name</string>
    <string name="stats">Statistics</string>
    
    <!-- Log Events -->
    <string name="header_dateTime">Date &amp; Time</string>
    <string name="header_logButtons">Log Events</string>
    <string name="header_recentEvents">Recent Events</string>
    
    <!-- Button names -->
    <string name="btn_logEvent">Log</string>
    <string name="btn_viewRecent">Recent</string>
    <string name="btn_add">Add New</string>
    
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_delete">Delete</string>
    
    <!-- Toggle switches -->
    <string name="toggle_active">Active</string>
    <string name="toggle_inactive">Inactive</string>
    
    <!-- Tabs -->
    <string name="tab_log">Log</string>
    <string name="tab_export">Export</string>
    <string name="tab_stats">Statistics</string>
    
    <!-- Edit Event Types -->
    <string name="default_eventTypeName">New Event</string>
    <string name="confirm_deleteTitle">Confirm Delete?</string>
    <string name="confirm_delete">Are you sure you want to delete these events and their associated logs?\n\nThis cannot be undone.</string>
    
    <!-- Export events -->
    <string name="header_exportSelect">Select Events to Export</string>
    <string name="header_filename">Output Filename</string>
    <string name="export_data">Export records to CSV</string>
    <string name="btn_export">Export selected records</string>
    <string name="no_storage">External storage is not available</string>
    <string name="export_fileName">lifeLogger.csv</string>
    <string name="export_complete">File was successfully exported</string>
    <string name="export_error">An error occured writing the file</string>
    <string name="confirm_overwriteTitle">File Exists</string>
    <string name="confirm_overwrite">This file already exists. Would you like to overwrite it?</string>
    
    <!-- Statistics -->
    <string name="header_selectEvent">Select Event</string>
    <string name="header_stats">Statistics</string>
    <string name="stats_total">Total</string>
    <string name="stats_totalDailyAverage">Total Daily Average</string>
    <string name="stats_activeDailyAverage">Active Daily Average</string>
    <string name="stats_weeklyAverage">Weekly Average</string>
    <string name="stats_calculating">Calculating, please wait&#8230;</string>
    
    <!-- Notifications/Messages -->
    <string name="events_updated">Events updated. Reloading&#8230;</string>
    
    
    <!-- Tag Keys -->
    <string name="tag_event">Event</string>
    <string name="tag_eventType">Event Type</string>
    <string name="tag_eventID">Event ID</string>
    <string name="tag_eventTypeName">Event Type Name</string>
    <string name="tag_eventTypeID">Event Type ID</string>
</resources>
