<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
>
	
	<RelativeLayout android:id="@+id/titleBar"
		android:background="@android:drawable/title_bar"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	>
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerHorizontal="true"
		    android:layout_centerVertical="true"
		    
		    style="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Subtitle"
		    android:text="@string/header_eventName"
	    />
		
		<!-- Make sure the width matches view_edit_event_type_line.xml's active toggle -->
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentRight="true"
		    android:layout_centerVertical="true"
		    
		    android:width="75sp"
		    android:gravity="center"
		    
		    style="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Subtitle"
		    
		    android:text="@string/header_active"
		/>
	</RelativeLayout>

	<LinearLayout android:id="@+id/container_editEventType"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/titleBar"
	    
	    android:orientation="vertical"
	    >
	    
	</LinearLayout>
	
	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
    >
	    <Button android:id="@+id/btn_save"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentBottom="true"
	        android:layout_toLeftOf="@+id/btn_delete"
	        
	        android:text="@string/btn_save"
        />
	    
	    <!-- TODO Turn this into a trashcan! -->
	    <Button android:id="@+id/btn_delete"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        
	        android:layout_centerHorizontal="true"
	        android:layout_alignParentBottom="true"
	        
	        android:text="@string/btn_delete"
	        android:enabled="false"
	    />
	    
	    <Button android:id="@+id/btn_cancel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        
	        android:layout_alignParentBottom="true"
	        android:layout_toRightOf="@id/btn_delete"
	        
	        android:text="@string/btn_cancel"
	    />
	</RelativeLayout>
</RelativeLayout>
